--- a/stlc.opam
+++ b/stlc.opam
@@ -2,13 +2,12 @@
 opam-version: "2.0"
 synopsis: "A short synopsis"
 description: "A longer description"
-maintainer: ["Maintainer Name"]
-authors: ["Author Name"]
-license: "LICENSE"
+maintainer: ["Lslightly"]
+authors: ["Lslightly"]
+license: "MIT"
 tags: ["topics" "to describe" "your" "project"]
-homepage: "https://github.com/username/reponame"
-doc: "https://url/to/documentation"
-bug-reports: "https://github.com/username/reponame/issues"
+homepage: "https://github.com/Lslightly/stcl"
+bug-reports: "https://github.com/Lslightly/stcl/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.12"}
@@ -28,4 +27,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/username/reponame.git"
+dev-repo: "git+https://github.com/Lslightly/stcl.git"
